# SCC

./: BUILD.md  CMakeLists.txt  README.md  comprehensive_test.c  quick_test.c  simple_test.c  stress_test.c
.claude/: settings.local.json
docs/: implementation_guide.md  scc_architecture.md
examples/: CMakeLists.txt  algorithm_comparison.c  basic_usage.c
include/: graph.h  scc.h  scc_algorithms.h
scripts/: build.bat  build.sh
src/: graph.c  graph_io.c  kosaraju.c  memory.c  scc.c  tarjan.c  utils.c
tests/: Makefile  test_framework.c  test_framework.h  test_graph.c  test_integration.c  test_io.c  test_kosaraju.c  test_main.c  test_memory.c  test_performance.c  test_scc.c  test_tarjan.c  test_utils.c
